// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSaturation accepts a color 1`] = `
<div>
  <div
    aria-activedescendant="undefined-saturationIndicator"
    aria-describedby="undefined-saturationDescription"
    aria-label="aria-label"
    aria-roledescription="HSV color mode saturation and value selection"
    class="ouiSaturation testClass1 testClass2"
    data-test-subj="test subject string"
    role="application"
    style="background: rgb(0, 0, 0);"
    tabindex="0"
  >
    <p
      class="ouiScreenReaderOnly"
    >
      Use the arrow keys to navigate the square color gradient. The coordinates resulting from each key press will be used to calculate HSV color mode 'saturation' and 'value' numbers, in the range of 0 to 1. Left and right decrease and increase (respectively) the 'saturation' value. Up and down decrease and increase (respectively) the 'value' value.
    </p>
    <p
      aria-live="polite"
      class="ouiScreenReaderOnly"
    />
    <div
      class="ouiSaturation__lightness"
    >
      <div
        class="ouiSaturation__saturation"
      />
    </div>
    <div
      class="ouiSaturation__indicator"
      id="undefined-saturationIndicator"
      style="left: 0px; top: 0px;"
    />
  </div>
</div>
`;

exports[`OuiSaturation is rendered 1`] = `
<div>
  <div
    aria-activedescendant="undefined-saturationIndicator"
    aria-describedby="undefined-saturationDescription"
    aria-label="aria-label"
    aria-roledescription="HSV color mode saturation and value selection"
    class="ouiSaturation testClass1 testClass2"
    data-test-subj="test subject string"
    role="application"
    style="background: rgb(255, 255, 0);"
    tabindex="0"
  >
    <p
      class="ouiScreenReaderOnly"
    >
      Use the arrow keys to navigate the square color gradient. The coordinates resulting from each key press will be used to calculate HSV color mode 'saturation' and 'value' numbers, in the range of 0 to 1. Left and right decrease and increase (respectively) the 'saturation' value. Up and down decrease and increase (respectively) the 'value' value.
    </p>
    <p
      aria-live="polite"
      class="ouiScreenReaderOnly"
    />
    <div
      class="ouiSaturation__lightness"
    >
      <div
        class="ouiSaturation__saturation"
      />
    </div>
    <div
      class="ouiSaturation__indicator"
      id="undefined-saturationIndicator"
      style="left: 0px; top: 0px;"
    />
  </div>
</div>
`;
